--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <h3 class="heading">DIGITAL CLOCK</h3>
-        <p id="land"></p>
+        <p id="para"></p>
     </div>
     
 
